working delete and saved

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,7 @@
         <div class="articleList" data-id= {{this._id}}>
             <div class="one">
                 <div class="title"><span>{{this.title}}</span></div>
-                <div class="btns"><button class="saveBtn">Save Article</div>
+                <div class="btns"><button class="saveBtn" data-id= {{this._id}}>Save Article</div>
             </div>
             <div class="two"><a href="{{this.link}}">{{this.link}}</a></div>
         </div>
