show notes in article notes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
+.container ul{
+    display:flex;
+    flex-direction: row;
+}
+
+
+
+
 .jumbotron{
     background-image:url(../img/codebackground.jpeg);
     background-size:cover;
