--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,26 @@
-.container ul{
-    display:flex;
-    flex-direction: row;
+.mainNav{
+    background-color:#2096ea;
+ 
+}
+.mainNav .navbarStyle{
+    height:5em;
+}
+
+.navbarStyle li{
+
 }
 
 
-
-
+.container ul{
+    display:flex;
+    flex-direction: row;
+    align-self:center;
+}
 .jumbotron{
-    background-image:url(../img/codebackground.jpeg);
+    background: linear-gradient(#a2a2a2 0%, #4a464694 90%), url(../img/codebackground.jpeg);
     background-size:cover;
     background-repeat:no-repeat;
+    background-blend-mode: darken;
    opacity:0.9;
     height:30em;
     z-index:-1;
@@ -22,40 +33,63 @@
 .centerTitle h1,p{
     display:block;
     font-weight:bold !important;
-    color:black;
+    color:white;
     z-index:10;
-    font-size:5em;
+    font-size:7em;
     opacity:1;
 }
 
 .centerTitle p{
     text-align:center;
 }
-
 .articleList{
-    border:1px solid black;
+    /* border:1px solid black; */
     text-overflow: hidden;
     overflow:hidden;
+    margin-bottom:1em;
+    -webkit-box-shadow: 0px 7px 36px -4px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 7px 36px -4px rgba(0,0,0,0.75);
+box-shadow: 0px 7px 36px -4px rgba(0,0,0,0.75);
 }
 .btns,.title,.two{
-    border:1px solid blue;
+    /* border:1px solid blue; */
 }
 .title,.two{
     width:60%;
     overflow:hidden;
-    padding:1em;
+    padding:2em;
+}
+.title span{
+    color:white;
 }
 .btns{
     display:flex;
     justify-content: space-between;
+    width:20em;
+    margin-right:1em;
+}
+.btns button{
+    height:3em;
+    display:flex;
+    align-self:center;
+}
+.btns1{
+    display:flex;
+    flex-direction:column;
+   justify-content:center;
+    margin-right:1em;
+}
+.saveBtn{
+    height:3em;
 }
 .one{
     display:flex;
     justify-content: space-between;
     width:100%;
     border-bottom:1px solid black;
-    background-color:lightblue;
+    background-color:#2096ea;
 }
+
 
 .currentNotes{
     padding:1em;
