--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -35,7 +35,7 @@
                         saved
                     </button></div>
             </div>
-            <div class="two"><a href="{{this.link}}">{{this.link}}</a></div>
+            <div class="two"><a href="{{this.link}}" target="_blank" rel="noopener">{{this.link}}</a></div>
         </div>
     {{/each}}
 </div>
