--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
             <a class="nav-link active" href="#">Mongo Scraper</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/saved">Saved Articles</a>
@@ -32,7 +32,7 @@
                 <div class="title"><span>{{this.title}}</span></div>
                 <div class="btns1"><button type="button" class="btn btn-success saveBtn" data-id= {{this._id}}>Save Article</div>
             </div>
-            <div class="two"><a href="{{this.link}}">{{this.link}}</a></div>
+            <div class="two"><a href="{{this.link}}" target="_blank" rel="noopener">{{this.link}}</a></div>
         </div>
     {{/each}}
 </div>
